MacViews/Profile Chooser: No initial focused View when full keyboard access off.

Buttons are not focusable on Mac when full keyboard access is turned off. In the
|ProfileChooserView|, a button is returned in
WidgetDelegate::GetInitiallyFocusedView(), causing Widget::SetInitialFocus() to
fail and fall back to focusing the first focusable View instead. This focuses
one of the |HoverButtons| in |ProfileChooserView|, which are always focusable
despite full keyboard access (see r518213) because they are designed to be used
as a menu. However, opening a menu does not typically focus the first menu item
on behalf of the user, so avoid this behavior by checking whether full keyboard
access is on first.

Bug: 787885
Change-Id: Ie1a92879b31720be4921450677bb3cbdf5b77ec5